@@ -490,11 +490,7 @@ void ibis::column::actualMinMax(const char *name, const ibis::bitvector& mask,
     std::string evt = "column";
     if (ibis::gVerbose > 2) {
         evt += '[';
-        if (thePart != 0) {
-            evt += thePart->name();
-            evt += '.';
-        }
-        evt += m_name;
+        evt += fullname();
         evt += ']';
     }
     evt += "::actualMinMax";
@@ -5760,11 +5756,7 @@ void ibis::column::loadIndex(const char* iopt, int ropt) const throw () {
     std::string evt = "column";
     if (ibis::gVerbose > 1) {
         evt += '[';
-        if (thePart != 0) {
-            evt += thePart->name();
-            evt += '.';
-        }
-        evt += name();
+        evt += fullname();
         evt += ']';
     }
     evt += "::loadIndex";
@@ -6330,9 +6322,7 @@ long ibis::column::evaluateRange(const ibis::qDiscreteRange& cmp,
     if (thePart == 0)
 	return -9;
     std::string evt = "column[";
-    evt += thePart->name();
-    evt += ".";
-    evt += m_name;
+    evt += fullname();
     evt += "]::evaluateRange";
     if (ibis::gVerbose > 0) {
 	std::ostringstream oss;
@@ -6795,9 +6785,7 @@ long ibis::column::evaluateRange(const ibis::qIntHod& cmp,
     if (thePart == 0)
 	return -9;
     std::string evt = "column[";
-    evt += thePart->name();
-    evt += ".";
-    evt += m_name;
+    evt += fullname();
     evt += "]::evaluateRange";
     if (ibis::gVerbose > 0) {
 	std::ostringstream oss;
@@ -6912,9 +6900,7 @@ long ibis::column::evaluateRange(const ibis::qUIntHod& cmp,
         return -9;
 
     std::string evt = "column[";
-    evt += thePart->name();
-    evt += ".";
-    evt += m_name;
+    evt += fullname();
     evt += "]::evaluateRange";
     if (ibis::gVerbose > 0) {
 	std::ostringstream oss;
